2000-10-30  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* GSWExtensions.framework/GNUmakefile: rewrite using framework.make
	* GSWExtensions.framework/*.(h|m): changed gsweb include dir from
	gsweb/GSWeb.framework/ to GSWeb/

	* GSWeb.framework/GNUmakefile: rewrite using framework.make
	* GSWeb.framework/*.(h|m): changed gsweb include dir from
	gsweb/GSWeb.framework/ to GSWeb/
	* GSWeb.framework/GSWConstants.m: removed the frameworkd suffix.
	* GSWeb.framework/GSWUtils.m ([NSBundle +tmpAllFrameworks]): removed.

2000-10-29  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* GSWeb.framework/GSWElementIDString.h: use NSMutableString instead of
	the no longer present NSGMutableString.

2000-10-04  Manuel Guesdon <mguesdon@orange-concept.com>

        * GSWExtensions.framework/Makefile.preamble: added GDL2 FLAG
        * GSWExtensions.framework/*/*.html: lowercase tags
        * GSWExtensionsGSW.framework/*/*.html: lowercase tags
        * GSWeb.framework/GNUmakefile : added DTDs, modified Files list
        * GSWeb.framework/GSWApplication.m: commented [GSWHTMLParser printsDiagnostics]
                                            changes for GDL2
        * GSWeb.framework/GSWBrowser.h/.m: implementation
        * GSWeb.framework/GSWBundle.m: Parser call modification, handling of .gswi unarchiving
        * GSWeb.framework/GSWComponentContent.m: Logs
        * GSWeb.framework/GSWConfig.h: Added GSWEB_DEFAULT_HTML_PARSER_CLASS_NAME
        * GSWeb.framework/GSWConstants.h/.m: added keys
        * GSWeb.framework/GSWDisplayGroup.h/.m member variables renamed
                                                implementation of some missing parts
        * GSWeb.framework/GSWRequest.m: remove duplicate languages
        * GSWeb.framework/GSWTemplateParser.h/.m: make it base class for different parsers
        * GSWeb.framework/GSWTemplateParserXML.h/.m: XML parser
        * GSWeb.framework/GSWTemplateParserANTLR.h/.m: ANTLR (old) parser